--- a/assets/fonts/styles/style.css
+++ b/assets/fonts/styles/style.css
@@ -1,8 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 
+
+/* imports */
 @font-face{
     font-family:'Montserrat-Regular.ttf';
     src: url('../Montserrat-Regular.ttf');
@@ -13,35 +11,117 @@
     src: url('../Montserrat-SemiBold.ttf');
 }
 
+@import url(../Montserrat-Regular.ttf);
+@import url(../Montserrat-SemiBold.ttf);
+@import url(../Barriecito-Regular.ttf);
+@import url(../Montserrat-Black.ttf);
+
+/* vaiables */
+
+:root {
+    --c-dark: #1e1e1e;
+    --c-brand: #bf0000;
+    --c-light: #ffffff;
+    --c-dark-light: #6e6c6c;
+    --font-base: "Montserrat-Regular.ttf", sans-serif;
+    --box-shadow: 0px 15px 25px #1e1e1e;
+    --transition: all 0.5s ease;
+}
+/* reset and helpers */
+body {
+    font-family: var(--font-base);
+    line-height: 1.7;
+    color: var(--c-dark);
+}
+
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+    font-weight: 600;
+}
+
+a {
+    text-decoration: none;
+    color: var(--c-brand);
+    transition: var(--transition);
+}
+
+a:hover {
+    color: var(--c-brand);
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.section padding {
+    padding-top: 140px;
+    padding-bottom: 140px
+}
+
+/* navbar */
+
+.navbar {
+    box-shadow: var(--c-dark-light);
+}
+.navbar-nav .nav-link {
+    font-weight: 500;
+    color: var(--c-dark);
+}
+
+.navbar-nav .nav-link.active {
+    color: var(--c-brand);
+}
+
+body {
+    padding-top: 70px;
+  }
+  .navbar.navbar-inverse {
+    border: none;
+  }
+  .navbar .navbar-brand {
+    padding-top: 0px;
+  }
+  .navbar .navbar-brand img {
+    height: 50px;
+}
+
+
+
+/* buttons */
 .btn{
-    font-size: 1.5rem;
+    font-weight: 600;
+    font-size: 14px;
+    text-transform: uppercase;
+    border-radius: 0;
+    padding: 10px 24px;
+
 }
 
 .btn-imp{
-    background-color: #bf0000;
-    border-color: #bf0000;
-    font-family: 'MontserratSemiBold';
-    color: #ffffff;
+    background-color: var(--c-brand);
+    border-color: var(--c-brand);
+    color: var(--c-light);
 }
 
 .btn-imp:hover{
-    background-color: #1e1e1e;
-    border-color: #1e1e1e;
-    font-family: 'Montserrat-SemiBold.ttf';
-    color: #ffffff;
+    background-color: var(--c-dark);
+    border-color: var(--c-dark);
+    color: var(--c-light);
 }
 
 .btn-imp:active{
     background-color: #1e1e1e;
     border-color: #1e1e1e;
-    font-family: 'Montserrat-SemiBold.ttf';
+    font-family: 'MontserratSemiBold';
     color: #ffffff;
 }
 
 .btn-imp:disabled{
     background-color: #bf0000;
     border-color: #bf0000;
-    font-family: 'Montserrat-SemiBold.ttf';
+    font-family: 'MontserratSemiBold';
     color: #ffffff;
     pointer-events: none
 }
@@ -49,33 +129,29 @@
 .btn-dark{
     background-color: #1e1e1e;
     border-color: #1e1e1e;
-    font-family: 'Montserrat-SemiBold.ttf';
+    font-family: 'MontserratSemiBold';
     color: #ffffff;
 }
 
 .btn-dark:hover{
     background-color: #ffffff;
     border-color: #ffffff;
-    font-family: 'Montserrat-SemiBold.ttf';
+    font-family: 'MontserratSemiBold';
     color: #1e1e1e;
 }
 
 .btn-dark:active{
     background-color: #ffffff;
     border-color: #ffffff;
-    font-family: 'Montserrat-SemiBold.ttf';
+    font-family: 'MontserratSemiBold';
     color: #1e1e1e;
 }
 
 .btn-dark:disabled{
     background-color: #1e1e1e;
     border-color: #1e1e1e;
-    font-family: 'Montserrat-SemiBold.ttf';
+    font-family: 'MontserratSemiBold';
     color: #ffffff;
     pointer-events: none
 }
 
-
-.menuLogo{
-    width:100px;
-}
