--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,10 +2,9 @@
 
 /* imports */
 
-@import url(../Montserrat-Regular.ttf);
-@import url(../Montserrat-SemiBold.ttf);
-@import url(../Barriecito-Regular.ttf);
-@import url(../Montserrat-Black.ttf);
+@import url(../fonts/Montserrat-Regular.ttf);
+@import url(../fonts/Montserrat-Bold.ttf);
+@import url(../fonts/Montserrat-SemiBold.ttf);
 
 /* vaiables */
 
@@ -18,6 +17,9 @@
     --box-shadow: 0px 15px 25px #1e1e1e;
     --transition: all 0.5s ease;
 }
+
+
+
 /* reset and helpers */
 body {
     font-family: var(--font-base);
@@ -29,6 +31,7 @@ body {
 h1, h2, h3, 
 .h1, .h2, .h3 {
     font-weight: 600;
+    color: var(--c-dark);
 }
 h4, h5, h6,
 .h4, .h5, .h6 {
@@ -50,9 +53,9 @@ img {
     height: auto;
 }
 
-.section padding {
-    padding-top: 140px;
-    padding-bottom: 140px
+.section-padding {
+    padding-top: 50pxpx;
+    padding-bottom: 50px
 }
 
 /* navbar */
@@ -89,9 +92,8 @@ body {
     font-weight: 600;
     font-size: 14px;
     text-transform: uppercase;
-    border-radius: 0;
+    border-radius: 100px;
     padding: 10px 24px;
-
 }
 
 .btn-imp{
@@ -107,46 +109,303 @@ body {
 }
 
 .btn-imp:active{
-    background-color: #1e1e1e;
-    border-color: #1e1e1e;
-    font-family: 'MontserratSemiBold';
-    color: #ffffff;
+    background-color: var(--c-dark);
+    border-color: var(--c-dark);
+    color: var(--c-light);
 }
 
 .btn-imp:disabled{
-    background-color: #bf0000;
-    border-color: #bf0000;
-    font-family: 'MontserratSemiBold';
-    color: #ffffff;
+    background-color: var(--c-dark-light);
+    border-color: var(--c-dark-light);
+    color: var(--c-dark);
     pointer-events: none
 }
 
 .btn-dark{
-    background-color: #1e1e1e;
-    border-color: #1e1e1e;
-    font-family: 'MontserratSemiBold';
-    color: #ffffff;
+    background-color: var(--c-dark);
+    border-color: var(--c-dark);
+    color: var(--c-light);
 }
 
 .btn-dark:hover{
-    background-color: #ffffff;
-    border-color: #ffffff;
-    font-family: 'MontserratSemiBold';
-    color: #1e1e1e;
+    background-color: var(--c-light);
+    border-color: var(--c-dark);
+    color: var(--c-dark);
 }
 
 .btn-dark:active{
-    background-color: #ffffff;
-    border-color: #ffffff;
-    font-family: 'MontserratSemiBold';
-    color: #1e1e1e;
+    background-color: var(--c-light);
+    border-color: var(--c-dark);
+    color: var(--c-dark);
 }
 
 .btn-dark:disabled{
-    background-color: #1e1e1e;
-    border-color: #1e1e1e;
-    font-family: 'MontserratSemiBold';
-    color: #ffffff;
+    background-color: var(--c-dark-light);
+    border-color: var(--c-dark-light);
+    color: var(--c-dark);
     pointer-events: none
 }
 
+/* hero section */
+#hero {
+    background: linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.457)), url(../images/enough.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+
+/* section title */
+.section-title {
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.section-title .line {
+    width: 60px;
+    height: 4px;
+    background-color: var(--c-brand);
+    margin: 16px auto 24px auto;
+}
+
+.section-title p {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/* iconsboxes */
+
+.iconbox {
+    width: 60px;
+    height: 70px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(var(--c-dark-light), 0.3);
+    color: var(--c-brand);
+    font-size: 44px;
+    flex: none;
+}
+
+/* overlays - NOT WORKING */
+
+.card-overlay {
+    background: linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.457));
+  }
+
+.overlay {
+    background-color: linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.457));
+}
+
+
+.bg-dark {
+    color: var(--c-dark);
+}
+
+.theme-shadow {
+    box-shadow: var(--c-dark);
+}
+
+/* footer */
+footer {
+    padding-top: 120px;
+}
+
+.footer-top {
+    padding-bottom: 30px;
+    border-bottom: 1px solid var(--c-dark, 0.1);
+}
+
+.footer-bottom {
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+footer li,
+footer p,
+footer a {
+    color: #ffffff;
+}
+
+footer ul {
+    list-style: none;
+    padding: 0;
+
+}
+
+footer .line {
+    width: 60px;
+    height: 5px;
+    background-color: var(--c-brand);
+    margin-top: 12px;
+    margin-bottom: 24px;
+}
+
+/* social icons */
+
+.social-icons a {
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color:#6e6c6c;
+    border-radius: 100px;
+}
+
+.social-icons a:hover {
+    background-color: #bf0000;
+    color: #ffffff;
+}
+
+/* contact */
+
+#contact {
+    position: relative;
+    z-index: 2;
+}
+
+#contact::after {
+    content: "";
+    width: 100%;
+    height: 70%;
+    background: linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.457)), url(../images/team-g4ccf4aa8b_1920.jpg);
+    background-position: center;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+#contact .form-control {
+    border-radius: 0;
+
+}
+
+#contact .form-control:focus {
+    box-shadow: none;
+    border-color: var(--c-brand);
+}
+
+/* image zoom on hover*/
+
+.image-zoom {
+    position: relative;
+    /* hidden overflow */
+}
+
+.image-zoom-wrapper {
+    overflow: hidden;
+    position: relative;
+}
+
+.image-zoom-wrapper img {
+    transition: var(--transition);
+}
+
+.image-zoom:hover .image-zoom-wrapper img {
+    transform: scale(1.1);
+}
+
+/* testimonials */
+.review small {
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--c-brand);
+}
+.review-head {
+    position:relative;
+}
+
+.review-head::after {
+    content: "";
+    width: 28px;
+    height: 28px;
+    position: absolute;
+    bottom: -14px;
+    background-color: white;
+    transform: rotate(45deg);
+}
+
+/* carousel --- the overlay is not working */
+.carousel {
+    max-width: fit-content;
+    height: 630px;
+}
+
+.carousel-item {
+   
+    height: 630px;
+    
+}
+
+.carousel-item .overlay {
+    background: linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.457));
+}
+.carousel-caption {
+    align-items: center;
+    padding-bottom: 200px;
+    line-height: 70px;
+
+}
+
+/* ------------OUR MISSION SECTION------------------- */
+
+.hero-section {
+    position: relative;
+    height: 500px;
+    margin-bottom: 50px;
+  }
+
+  .hero-image {
+    background: linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.457)), url(../images/OURACTIONS/OURACTIONSHERO.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+  }
+  
+  .hero-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: var(--c-light);
+  }
+  
+  .hero-text h1 {
+    font-size: 4rem;
+  }
+
+  .hero-text h1 {
+    font-size: 4rem;
+  }
+
+    /* sections with text and images */
+
+    .section-1,
+.section-2 {
+  padding: 50px 0;
+  background-color: var(--c-light);
+  text-align: center;
+}
+
+.section-1 h2,
+.section-2 h2 {
+  margin-bottom: 30px;
+}
+
+.section-1 p,
+.section-2 p {
+  text-align: left;
+}
+
+.section-1 img,
+.section-2 img {
+  display: block;
+  margin: auto;
+  margin-top: 50px;
+  max-width: 100%;
+}
