--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -71,24 +71,25 @@ img {
     font-weight: 500;
     color: var(--c-dark);
 }
-
 .navbar-nav .nav-link.active {
     color: var(--c-brand);
 }
-
-body {
-    padding-top: 70px;
-  }
-  .navbar.navbar-inverse {
-    border: none;
-  }
   .navbar .navbar-brand {
     padding-top: 0px;
   }
   .navbar .navbar-brand img {
     height: 50px;
 }
-
+.collapse {
+    display: none;
+}
+.navbar-toggler {
+    border: none;
+    background-color: transparent;
+}
+.navbar-toggler-icon {
+    background-image: url(../images/menu-line.svg);
+}
 
 
 /* buttons */
@@ -523,3 +524,32 @@ footer .line {
         color: var(--c-light);
     }
     
+
+    /* -----contact page */
+    #contactpage {
+        position: relative;
+        z-index: 2;
+    }
+    
+    #contactpage::after {
+        content: "";
+        width: 100%;
+        height: 70%;
+        background: linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.457)), url(../images/team-g4ccf4aa8b_1920.jpg);
+        background-position: center;
+        background-size: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+    
+    #contactpage .form-control {
+        border-radius: 0;
+    
+    }
+    
+    #contactpage .form-control:focus {
+        box-shadow: none;
+        border-color: var(--c-brand);
+    }
